fix: preserve runtime diagnostics before exact hook linkage